syntax = "proto3";
package sgenetwork.sge.market;

import "gogoproto/gogo.proto";
import "sge/market/params.proto";
import "sge/market/market.proto";
import "sge/market/stats.proto";

option go_package = "github.com/sge-network/sge/x/market/types";

// GenesisState defines the market module's genesis state.
message GenesisState {
  // params are the parameters of the market module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  // market_list is the list of markets that are available in the
  // chain init.
  repeated Market market_list = 2 [ (gogoproto.nullable) = false ];
  // stats is the statistics of the markets
  MarketStats stats = 3 [ (gogoproto.nullable) = false ];
}
